fix: set overflow hidden only on popup

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,7 +59,6 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
 }
 
 body {
